fix: update company address and contact information in policy documents

--- a/my-app/policies/Kenya.html
+++ b/my-app/policies/Kenya.html
@@ -128,10 +128,10 @@
 
     <h2>15. How Do I Contact You?</h2>
     <p>If you have any questions about this Policy, or have any complaints, suggestions, questions or requests regarding anything you can contact us as described below.</p>
-    <p>Intelli Holdings Inc with a registered address at 3500 South Dupont Highway, City of Dover, County of Kent, Delaware 19901 (United States)</p>
+    <p>Intelli Holdings Inc with a registered address at Kaburu Drive, Pinetree Plaza, P.O BOX 7353, 00100, Nairobi, Kenya</p>
     <p>Email: support@intelliconcierge.com<br>
     Telephone: +254745051091<br>
-    TW/X: @intelli_concierge<br>
+    X(Formerly Twitter): @intelli_concierge<br>
     Instagram: @intelli_concierge<br>
     LinkedIn:</p>
 
