--- a/my-app/policies/EU.html
+++ b/my-app/policies/EU.html
@@ -129,7 +129,8 @@
     <h2>15. How Do I Contact You?</h2>
 
      <p>If you have any questions about this Policy, or have any complaints, suggestions, questions or requests regarding anything you can contact us as described below.</p>
-    <p>Intelli Holdings Inc with a registered address at 3500 South Dupont Highway, City of Dover, County of Kent, Delaware 19901 (United States)</p>
+    <p>Intelli Holdings Inc with a registered address in the State of Delaware at
+251 little Falls Drive, city of Wilmington, County of Newcastle, Delaware 19808</p>
     <p>Email: support@intelliconcierge.com<br>
     Telephone: +254745051091<br>
     TW/X: @intelli_concierge<br>
